--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -13,7 +13,7 @@
 }
 
 .card-header {
-  background: linear-gradient(135deg, #007bff, #0056b3);
+  background: linear-gradient(135deg, #0F183E, #021670);
   color: white;
   font-weight: bold;
   text-transform: uppercase;
