--- a/src/app/mysounds/mysounds.component.html
+++ b/src/app/mysounds/mysounds.component.html
@@ -108,6 +108,8 @@
               [multiple]="true"
               [closeOnSelect]="false"
               placeholder="Select sound effects"
+                        class="ng-select ng-select-bordered shadow-sm"
+
               name="soundEffects">
               <ng-template ng-label-tmp let-item="item" let-clear="clear">
                 <span class="badge bg-primary me-1 d-inline-flex align-items-center">
