--- a/src/app/submitsound/submitsound.component.css
+++ b/src/app/submitsound/submitsound.component.css
@@ -35,7 +35,17 @@
     min-height: 45px;
     font-size: 0.95rem;
   }
-  
+  .ng-select .ng-select-container .ng-value-container .ng-input>input {
+    box-sizing: content-box;
+    background: none transparent;
+    border: 0 none;
+    box-shadow: none;
+    outline: none;
+    padding: 0;
+    cursor: default;
+    width: 100%;
+    height: 33px;
+}
   ::ng-deep .ng-select .ng-select-container {
     border: 1px solid #ced4da;
     padding: 0.375rem 0.75rem;
